# devmesh

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  IMPLEMENTATION_SUMMARY.md  INDEX.md  INTEGRATION_GUIDE.md  Makefile  QUICK_START.md  README.md  agent_bridge.py  check_tools.py  client_mock.py  config.py  config_manager.py  conftest.py  dashboard.html  dashboard_enhancements.js  docker-compose.yml  error_handler.py  errors.py  logger.py  middleware.py  orjson.py  prometheus_client.py  pyproject.toml  rate_limit.py  requirements-dev.txt  requirements.txt  resilience.py  security.py  server.py  storage.py  verify_fixes.py
.devmesh/: audit.jsonl  devmesh.db  devmesh.db-shm  devmesh.db-wal  memory.json.bak  rulebook.md
.github/workflows/: ci.yml
docs/: architecture.md  lock-protocol.md  openapi.yaml  troubleshooting.md
handlers/: __init__.py  agent_handler.py  dashboard_handler.py
models/: __init__.py
services/: __init__.py  agent_manager.py  context_manager.py  file_watcher.py  lock_manager.py  result_cache.py  task_manager.py  task_templates.py  webhook_manager.py  ws_health.py
tests/: test_agent_manager.py  test_context_manager.py  test_core.py  test_external_tools.py  test_hardware_throttle.py  test_lock_management.py  test_resilience.py  test_security.py  test_task_manager.py  test_websocket_integration.py
